Found the problem with the selected silence level The level should be -20 instead of -30

--- a/Splitter_stage_3.ipynb
+++ b/Splitter_stage_3.ipynb
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "f99c28aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-31T23:46:47.290828Z",
-     "start_time": "2022-03-31T23:46:47.262928Z"
+     "end_time": "2022-04-01T00:14:57.553977Z",
+     "start_time": "2022-04-01T00:14:57.535029Z"
     }
    },
    "outputs": [],
@@ -144,7 +144,7 @@
     "    min_duration,\n",
     "    max_duration,\n",
     "):\n",
-    "    split_cmd = f\"ffmpeg -i {src} -af silencedetect=n=-30dB:d=0.25 -f null - \"\n",
+    "    split_cmd = f\"ffmpeg -i {src} -af silencedetect=n=-20dB:d=0.25 -f null - \"\n",
     "    out = subprocess.Popen(split_cmd,\n",
     "                           stdout=subprocess.PIPE,\n",
     "                           stderr=subprocess.STDOUT)\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8a6ae6",
+   "id": "a99700f6",
    "metadata": {},
    "source": [
     "**I want to place each 7 files in a folder**\n"
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea58e02e",
+   "id": "936d4b90",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:29:02.221844Z",
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "eb42341c",
+   "id": "fbd183c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:38:39.687426Z",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c3c4a4b6",
+   "id": "287405e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:40:06.992083Z",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa9970d",
+   "id": "e55828be",
    "metadata": {},
    "source": [
     "**Creating a function of splitting**"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "90b5057a",
+   "id": "5ffaa497",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:47:07.692783Z",
@@ -404,12 +404,13 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "54e6aa32",
+   "id": "234f68b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:50:17.544919Z",
      "start_time": "2022-03-31T23:49:54.797485Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -453,8 +454,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "d2239ad2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-01T00:21:28.943012Z",
+     "start_time": "2022-04-01T00:15:25.236763Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10. The X:/Music/RightlyGuidedCalifate\\RGC010_.mp3 file was split successfuly\n",
+      "11. The X:/Music/RightlyGuidedCalifate\\RGC011_.mp3 file was split successfuly\n",
+      "12. The X:/Music/RightlyGuidedCalifate\\RGC012_.mp3 file was split successfuly\n",
+      "13. The X:/Music/RightlyGuidedCalifate\\RGC013_.mp3 file was split successfuly\n",
+      "14. The X:/Music/RightlyGuidedCalifate\\RGC014_.mp3 file was split successfuly\n",
+      "15. The X:/Music/RightlyGuidedCalifate\\RGC015_.mp3 file was split successfuly\n",
+      "16. The X:/Music/RightlyGuidedCalifate\\RGC016_.mp3 file was split successfuly\n",
+      "17. The X:/Music/RightlyGuidedCalifate\\RGC017_.mp3 file was split successfuly\n",
+      "18. The X:/Music/RightlyGuidedCalifate\\RGC018_.mp3 file was split successfuly\n",
+      "19. The X:/Music/RightlyGuidedCalifate\\RGC019_.mp3 file was split successfuly\n",
+      "20. The X:/Music/RightlyGuidedCalifate\\RGC020_.mp3 file was split successfuly\n",
+      "21. The X:/Music/RightlyGuidedCalifate\\RGC021_.mp3 file was split successfuly\n",
+      "22. The X:/Music/RightlyGuidedCalifate\\RGC022_.mp3 file was split successfuly\n",
+      "23. The X:/Music/RightlyGuidedCalifate\\RGC023_.mp3 file was split successfuly\n",
+      "24. The X:/Music/RightlyGuidedCalifate\\RGC024_.mp3 file was split successfuly\n",
+      "25. The X:/Music/RightlyGuidedCalifate\\RGC025_.mp3 file was split successfuly\n",
+      "26. The X:/Music/RightlyGuidedCalifate\\RGC026_.mp3 file was split successfuly\n",
+      "27. The X:/Music/RightlyGuidedCalifate\\RGC027_.mp3 file was split successfuly\n",
+      "28. The X:/Music/RightlyGuidedCalifate\\RGC028_.mp3 file was split successfuly\n",
+      "29. The X:/Music/RightlyGuidedCalifate\\RGC029_.mp3 file was split successfuly\n",
+      "30. The X:/Music/RightlyGuidedCalifate\\RGC030_.mp3 file was split successfuly\n",
+      "31. The X:/Music/RightlyGuidedCalifate\\RGC031_.mp3 file was split successfuly\n",
+      "32. The X:/Music/RightlyGuidedCalifate\\RGC032_.mp3 file was split successfuly\n",
+      "33. The X:/Music/RightlyGuidedCalifate\\RGC033_.mp3 file was split successfuly\n",
+      "34. The X:/Music/RightlyGuidedCalifate\\RGC034_.mp3 file was split successfuly\n",
+      "35. The X:/Music/RightlyGuidedCalifate\\RGC035_.mp3 file was split successfuly\n",
+      "36. The X:/Music/RightlyGuidedCalifate\\RGC036_.mp3 file was split successfuly\n",
+      "37. The X:/Music/RightlyGuidedCalifate\\RGC037_.mp3 file was split successfuly\n",
+      "38. The X:/Music/RightlyGuidedCalifate\\RGC038_.mp3 file was split successfuly\n",
+      "39. The X:/Music/RightlyGuidedCalifate\\RGC039_.mp3 file was split successfuly\n",
+      "40. The X:/Music/RightlyGuidedCalifate\\RGC040_.mp3 file was split successfuly\n",
+      "41. The X:/Music/RightlyGuidedCalifate\\RGC041_.mp3 file was split successfuly\n",
+      "42. The X:/Music/RightlyGuidedCalifate\\RGC042_.mp3 file was split successfuly\n",
+      "43. The X:/Music/RightlyGuidedCalifate\\RGC043_.mp3 file was split successfuly\n",
+      "44. The X:/Music/RightlyGuidedCalifate\\RGC044_.mp3 file was split successfuly\n",
+      "45. The X:/Music/RightlyGuidedCalifate\\RGC045_.mp3 file was split successfuly\n",
+      "46. The X:/Music/RightlyGuidedCalifate\\RGC046_.mp3 file was split successfuly\n",
+      "47. The X:/Music/RightlyGuidedCalifate\\RGC047_.mp3 file was split successfuly\n",
+      "48. The X:/Music/RightlyGuidedCalifate\\RGC048_.mp3 file was split successfuly\n",
+      "49. The X:/Music/RightlyGuidedCalifate\\RGC049_.mp3 file was split successfuly\n",
+      "50. The X:/Music/RightlyGuidedCalifate\\RGC050_.mp3 file was split successfuly\n",
+      "51. The X:/Music/RightlyGuidedCalifate\\RGC051_.mp3 file was split successfuly\n",
+      "52. The X:/Music/RightlyGuidedCalifate\\RGC052_.mp3 file was split successfuly\n",
+      "53. The X:/Music/RightlyGuidedCalifate\\RGC053_.mp3 file was split successfuly\n",
+      "54. The X:/Music/RightlyGuidedCalifate\\RGC054_.mp3 file was split successfuly\n",
+      "55. The X:/Music/RightlyGuidedCalifate\\RGC055_.mp3 file was split successfuly\n",
+      "56. The X:/Music/RightlyGuidedCalifate\\RGC056_.mp3 file was split successfuly\n",
+      "57. The X:/Music/RightlyGuidedCalifate\\RGC057_.mp3 file was split successfuly\n",
+      "58. The X:/Music/RightlyGuidedCalifate\\RGC058_.mp3 file was split successfuly\n",
+      "59. The X:/Music/RightlyGuidedCalifate\\RGC059_.mp3 file was split successfuly\n",
+      "60. The X:/Music/RightlyGuidedCalifate\\RGC060_.mp3 file was split successfuly\n",
+      "61. The X:/Music/RightlyGuidedCalifate\\RGC061_.mp3 file was split successfuly\n",
+      "62. The X:/Music/RightlyGuidedCalifate\\RGC062_.mp3 file was split successfuly\n",
+      "63. The X:/Music/RightlyGuidedCalifate\\RGC063_.mp3 file was split successfuly\n",
+      "64. The X:/Music/RightlyGuidedCalifate\\RGC064_.mp3 file was split successfuly\n",
+      "65. The X:/Music/RightlyGuidedCalifate\\RGC065_.mp3 file was split successfuly\n",
+      "66. The X:/Music/RightlyGuidedCalifate\\RGC066_.mp3 file was split successfuly\n",
+      "67. The X:/Music/RightlyGuidedCalifate\\RGC067_.mp3 file was split successfuly\n",
+      "68. The X:/Music/RightlyGuidedCalifate\\RGC068_.mp3 file was split successfuly\n",
+      "69. The X:/Music/RightlyGuidedCalifate\\RGC069_.mp3 file was split successfuly\n",
+      "70. The X:/Music/RightlyGuidedCalifate\\RGC070_.mp3 file was split successfuly\n",
+      "71. The X:/Music/RightlyGuidedCalifate\\RGC071_.mp3 file was split successfuly\n",
+      "72. The X:/Music/RightlyGuidedCalifate\\RGC072_.mp3 file was split successfuly\n",
+      "73. The X:/Music/RightlyGuidedCalifate\\RGC073_.mp3 file was split successfuly\n",
+      "74. The X:/Music/RightlyGuidedCalifate\\RGC074_.mp3 file was split successfuly\n",
+      "75. The X:/Music/RightlyGuidedCalifate\\RGC075_.mp3 file was split successfuly\n",
+      "76. The X:/Music/RightlyGuidedCalifate\\RGC076_.mp3 file was split successfuly\n",
+      "77. The X:/Music/RightlyGuidedCalifate\\RGC077_.mp3 file was split successfuly\n",
+      "78. The X:/Music/RightlyGuidedCalifate\\RGC078_.mp3 file was split successfuly\n",
+      "79. The X:/Music/RightlyGuidedCalifate\\RGC079_.mp3 file was split successfuly\n",
+      "80. The X:/Music/RightlyGuidedCalifate\\RGC080_.mp3 file was split successfuly\n",
+      "81. The X:/Music/RightlyGuidedCalifate\\RGC081_.mp3 file was split successfuly\n",
+      "82. The X:/Music/RightlyGuidedCalifate\\RGC082_.mp3 file was split successfuly\n",
+      "83. The X:/Music/RightlyGuidedCalifate\\RGC083_.mp3 file was split successfuly\n",
+      "84. The X:/Music/RightlyGuidedCalifate\\RGC084_.mp3 file was split successfuly\n",
+      "85. The X:/Music/RightlyGuidedCalifate\\RGC085_.mp3 file was split successfuly\n",
+      "86. The X:/Music/RightlyGuidedCalifate\\RGC086_.mp3 file was split successfuly\n",
+      "87. The X:/Music/RightlyGuidedCalifate\\RGC087_.mp3 file was split successfuly\n",
+      "88. The X:/Music/RightlyGuidedCalifate\\RGC088_.mp3 file was split successfuly\n",
+      "89. The X:/Music/RightlyGuidedCalifate\\RGC089_.mp3 file was split successfuly\n",
+      "90. The X:/Music/RightlyGuidedCalifate\\RGC090_.mp3 file was split successfuly\n",
+      "91. The X:/Music/RightlyGuidedCalifate\\RGC091_.mp3 file was split successfuly\n",
+      "92. The X:/Music/RightlyGuidedCalifate\\RGC092_.mp3 file was split successfuly\n",
+      "93. The X:/Music/RightlyGuidedCalifate\\RGC093_.mp3 file was split successfuly\n",
+      "94. The X:/Music/RightlyGuidedCalifate\\RGC094_.mp3 file was split successfuly\n",
+      "95. The X:/Music/RightlyGuidedCalifate\\RGC095_.mp3 file was split successfuly\n",
+      "96. The X:/Music/RightlyGuidedCalifate\\RGC096_.mp3 file was split successfuly\n",
+      "97. The X:/Music/RightlyGuidedCalifate\\RGC097_.mp3 file was split successfuly\n",
+      "98. The X:/Music/RightlyGuidedCalifate\\RGC098_.mp3 file was split successfuly\n",
+      "99. The X:/Music/RightlyGuidedCalifate\\RGC099_.mp3 file was split successfuly\n",
+      "100. The X:/Music/RightlyGuidedCalifate\\RGC100_.mp3 file was split successfuly\n",
+      "101. The X:/Music/RightlyGuidedCalifate\\RGC101_.mp3 file was split successfuly\n",
+      "102. The X:/Music/RightlyGuidedCalifate\\RGC102_.mp3 file was split successfuly\n",
+      "103. The X:/Music/RightlyGuidedCalifate\\RGC103_.mp3 file was split successfuly\n",
+      "104. The X:/Music/RightlyGuidedCalifate\\RGC104_.mp3 file was split successfuly\n",
+      "105. The X:/Music/RightlyGuidedCalifate\\RGC105_.mp3 file was split successfuly\n",
+      "106. The X:/Music/RightlyGuidedCalifate\\RGC106_.mp3 file was split successfuly\n",
+      "107. The X:/Music/RightlyGuidedCalifate\\RGC107_.mp3 file was split successfuly\n",
+      "108. The X:/Music/RightlyGuidedCalifate\\RGC108_.mp3 file was split successfuly\n",
+      "109. The X:/Music/RightlyGuidedCalifate\\RGC109_.mp3 file was split successfuly\n",
+      "110. The X:/Music/RightlyGuidedCalifate\\RGC110_.mp3 file was split successfuly\n",
+      "111. The X:/Music/RightlyGuidedCalifate\\RGC111_.mp3 file was split successfuly\n",
+      "112. The X:/Music/RightlyGuidedCalifate\\RGC112_.mp3 file was split successfuly\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_interval, min_duration, max_duration = 180, 30, 240\n",
+    "source_folder = \"X:/Music/RightlyGuidedCalifate\"\n",
+    "output_folder = os.path.join(source_folder, \"output\")\n",
+    "for file_number in range(10, 113): #From 5 to 112\n",
+    "    src = os.path.join(source_folder, f\"RGC{file_number:03d}_.mp3\")\n",
+    "    result = os.path.join(get_output_folder(output_folder, file_number),\n",
+    "                          f\"RGC{file_number:03d}_%d.mp3\")\n",
+    "    print(file_number, end=\". \")\n",
+    "    split_audio_file(src, result, split_interval, min_duration, max_duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c056d7ca",
+   "id": "e9fc1a64",
    "metadata": {},
    "outputs": [],
    "source": []
