Performed the command to speed the mp3 and re-encode in oneshot

--- a/pyAudioCompressor.ipynb
+++ b/pyAudioCompressor.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "884c78eb",
+   "id": "12c28b01",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:38:19.836386Z",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e6631e92",
+   "id": "64242883",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:42:19.411592Z",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "38934231",
+   "id": "d4a9dd11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:50:07.580761Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "090a3c88",
+   "id": "9e7fa6e9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:50:10.161796Z",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6098a8a",
+   "id": "27c7ffaf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:39:46.814787Z",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41dac8c2",
+   "id": "f89369e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:40:26.517056Z",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afaa06c2",
+   "id": "bbe4b767",
    "metadata": {},
    "source": [
     "**Trying to execute `ffmpeg` commands from python**\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "03a5230c",
+   "id": "886d2422",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:50:21.907527Z",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3b46133f",
+   "id": "2aa0d503",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:55:52.313609Z",
@@ -223,13 +223,14 @@
     "# Stage 2\n",
     "src, out = out, 'Outputs/OutFileStage2.mp3'\n",
     "stg2 = f\"ffmpeg -i {src} -ac 1 -b:a {bit}k -ar {frq} -write_xing 0 {out}\"\n",
+    "\n",
     "subprocess.call(stg2, shell=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "14f7320b",
+   "id": "ea92a460",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T00:56:42.966224Z",
@@ -255,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5192c02b",
+   "id": "21e9b982",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-01T01:00:00.657840Z",
@@ -280,14 +281,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56643d1e",
+   "metadata": {},
+   "source": [
+    "Trying to find the best ffmpeg commands,\n",
+    "\n",
+    "from these posts:\n",
+    "1. https://stackoverflow.com/a/12952172/5820024\n",
+    "2. https://stackoverflow.com/a/39789131/5820024\n",
+    "3. https://superuser.com/a/553049/724450\n",
+    "4. https://superuser.com/a/704535/724450\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cff41b16",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-01T02:11:49.068275Z",
+     "start_time": "2022-04-01T02:11:47.066589Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg -y -i TestFile.mp3 -filter:a \"atempo=1.35,volume=0.95\" -vn -ar 44100 -ac 2 -b:a 16k -write_xing 0 Outputs/OutFileOneShot.mp3\n",
+      "failed :-\\(\n"
+     ]
+    }
+   ],
+   "source": [
+    "src = source\n",
+    "out = 'Outputs/OutFileOneShot.mp3'\n",
+    "vol = 0.95\n",
+    "ffmpeg_command = f'ffmpeg -y -i {src} -filter:a \"atempo={spd},volume={vol}\" '\n",
+    "ffmpeg_command += f'-vn -ar 44100 -ac 2 -b:a 16k -write_xing 0 {out}'\n",
+    "print(ffmpeg_command)\n",
+    "performed = subprocess.call(ffmpeg_command, shell=True)\n",
+    "if performed:\n",
+    "    print(\"*Done*\")\n",
+    "else:\n",
+    "    print(\"failed :-\\(\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc71750",
+   "id": "68d19ad0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ffmpeg_command = f'ffmpeg -y -i {src} -filter:a \"atempo={spd},volume={vol}\" -vn -ar 44100 -ac 2 -b:a 16k -write_xing 0 {out}'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
